2012-06-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* mm-decode.el (mm-display-part): Dissect archives when hitting `RET'
	on a handle.

	* gnus-sum.el (gnus-summary-limit-to-author): Use the current From
	address as the default.
	(gnus-summary-insert-old-articles): Don't include unexistent messages.

	* nnfolder.el (nnfolder-save-buffer): Delete old versions silently.  It
	makes no sense to query the user about internal files.

	* gnus-spec.el: Remove all the byte-compilation stuff, since
	benchmarking shows that it doesn't help when entering large summary
	buffers.

	* gnus-xmas.el (gnus-xmas-define): Remove.

	* gnus-util.el (gnus-byte-code): Remove.

	* gnus-spec.el (gnus-update-format-specifications): Remove outdated
	grouplens stuff.

2012-06-07  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-msg.el (gnus-msg-mail): Warn the user about Gnus not running
	(bug#11514).

2012-06-07  Stephen Eglen  <S.J.Eglen@damtp.cam.ac.uk>

	* message.el (message-buffers): Return all buffers derived from Message
	to make `gnus-dired-attach' work with mu4e.

2012-06-01  Stefan Monnier  <monnier@iro.umontreal.ca>

	* nntp.el: Stop the `letf' madness.
	(nntp--report-1): New var.
	(nntp-report): Merge nntp-report-1 into it.
	(nntp-with-open-group-function): Set nntp--report-1 instead of modifying
	the nntp-report function.

	* auth-source.el: Fix comment-style to follow the convention.

2012-05-28  Daiki Ueno  <ueno@unixuser.org>

	* mm-decode.el (mm-inhibit-auto-detect-attachment): New variable.
	(mm-dissect-singlepart): Don't guess the MIME type of
	application/octet-stream parts if mm-inhibit-auto-detect-attachment is
	set.
	(mm-dissect-multipart): Bind mm-inhibit-auto-detect-attachment if the
	toplevel MIME type is multipart/encrypted.

2012-05-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-msg.el (gnus-msg-mail): Ensure that gnus-newsgroup-name is
	a string so that Gcc works (bug#11514).

2012-05-26  Stefan Monnier  <monnier@iro.umontreal.ca>
